[package]
edition = "2021"
name = "gpio_interrupt"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.7"

[dependencies.once_cell]
version = "1.17"
features = ["critical-section"]
default-features = false
