[package]
edition = "2021"
name = "rtic_blink"
version = "0.1.0"
publish = false

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

rp-pico = { workspace = true }

cortex-m-rtic = "1.1"
fugit = "0.3"
