[package]
edition = "2021"
name = "usb_interrupt"
version = "0.1.0"
publish = false

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

rp-pico = { workspace = true }

usb-device = { version = "0.2", features = ["defmt"] }
usbd-serial = "0.1"

embedded-alloc = "0.5"
self_cell = "1.1"
once_cell = { workspace = true }
